<resources>
    <string name="app_name">Todo</string>
    <string name="action_settings">Settings</string>
    <string name="preference_color">Preference Color</string>
    <string name="time_created">Time Created</string>
    <string name="high_priority">HIGH</string>
    <string name="med_priority">MEDIUM</string>
    <string name="low_priority">LOW</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="confirm">Confirm delete</string>
    <string name="delete_task_msg">Are you sure you want to delete this todo</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="new_task">Add new todo</string>
    <string name="delete_all">Do you want to delete all todos ?</string>
    <string name="exit_msg">Please press again to exit.</string>
    <string name="empty_fields">Please fill all fields.</string>
    <string name="import_todos">Import todos</string>
    <string name="backup_todos">Backup todos</string>
    <string name="delete_all_todos">Delete all todos</string>
    <string name="search">Search</string>
    <string name="edit">Edit</string>
    <string name="edit_todo">Edit todo</string>
    <string name="add_new_todo">Add new todo</string>
    <string name="all_todos">All todos</string>
    <string name="pending_todos">Pending todos</string>
    <string name="completed_todos">Completed todos</string>
    <string name="help">Help</string>
    <string name="about_app">About App</string>
    <string name="share">Share</string>
    <string name="upload">Upload</string>
    <string name="copy">Copy</string>
    <string name="no_completed_todo_available">No completed todo available</string>
    <string name="title">Title</string>
    <string name="no_todo_found">No todo found</string>
    <string name="add_todo">Add todo</string>
    <string name="last_updated_0n">Last updated 0n :</string>
    <string name="updated_date">Updated date</string>
    <string name="details">Details</string>
    <string name="select_priority">Select Priority :</string>
</resources>
