<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/add_new_task"
            android:icon="@drawable/add"
            android:title="@string/add_new_todo" />

        <item
            android:id="@+id/nav_activity"
            android:icon="@drawable/pending_tasks"
            android:title="@string/all_todos" />

        <item
            android:id="@+id/nav_activity1"
            android:icon="@drawable/pending_tasks"
            android:title="@string/pending_todos" />
        <item
            android:id="@+id/nav_activity2"
            android:icon="@drawable/completed_tasks"
            android:title="@string/completed_todos" />
    </group>

    <item android:title="Info">
        <menu>
            <item
                android:id="@+id/help"
                android:icon="@drawable/ic_apps_black_24dp"
                android:title="@string/help" />

        <item
            android:id="@+id/about"
            android:icon="@drawable/ic_apps_black_24dp"
            android:title="@string/about_app" />
        </menu>
    </item>
</menu>
