<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/shareLinearLayout"
        android:background="?android:attr/selectableItemBackground"
        android:padding="8dp"
        >

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/delete1"
            android:tint="@color/colorAccent"
            android:layout_margin="8dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share"
            android:layout_gravity="center_vertical"
            android:padding="8dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/uploadLinearLayout"
        android:background="?android:attr/selectableItemBackground"
        android:padding="8dp"
        >

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/add"
            android:tint="@color/colorAccent"
            android:layout_margin="8dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload"
            android:layout_gravity="center_vertical"
            android:padding="8dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/copyLinearLayout"
        android:background="?android:attr/selectableItemBackground"
        android:padding="8dp"
        >

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/edit1"
            android:tint="@color/colorAccent"
            android:layout_margin="8dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copy"
            android:layout_gravity="center_vertical"
            android:padding="8dp"
            />

    </LinearLayout>

</LinearLayout>