<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E5E5E5"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.MainActivity">
    <!--tools:showIn="@layout/activity_main">-->

    <LinearLayout
        android:id="@+id/no_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        android:background="#fff"
        android:padding="16dp"
        tools:visibility="visible">

        <ImageView
            android:id="@+id/pending_todos_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:src="@drawable/ic_empty_task"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/no_pending_todo_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/no_todo_found"
            android:fontFamily="serif"
            android:textColor="@color/note_list_text"
            android:textSize="13sp" />

    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/card_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="?android:attr/selectableItemBackground"
        android:visibility="visible"
        app:cardElevation="2dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="15dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="22dp"
                android:contentDescription="@string/app_name"
                android:tint="@color/gws_color_material_grey_500"
                android:src="@drawable/note_add" />

            <TextView
                android:id="@+id/add_task"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_todo"
                android:fontFamily="serif"
                android:textColor="@color/textColorSecondary"
                android:textSize="14sp" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!--tools:listitem="@layout/task_item" />-->

    android:layout_height="wrap_content">
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:background="#E5E5E5"
        android:orientation="vertical"
        android:padding="5dp"
        android:scrollbars="none" />
</FrameLayout>