<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardUseCompatPadding="true"
    app:cardElevation="2dp">

    <LinearLayout
        android:id="@+id/layout_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <LinearLayout
            android:id="@+id/linear_completed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="3">

            <TextView
                android:id="@+id/completed_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/title"
                android:textColor="@color/note_list_text"
                android:textSize="13sp"
                android:fontFamily="serif"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/completed_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/completed_todos"
                android:fontFamily="serif"
                android:textColor="@color/note_list_text"
                android:textSize="13sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/each_pending_todo_section1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:orientation="horizontal"
            android:weightSum="6">

            <TextView
                android:id="@+id/completed_priority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="#4CAF50"
                android:fontFamily="serif"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/completed_date"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:textSize="12sp"
                android:fontFamily="serif"
                tools:text="12/12/2018" />

            <TextView
                android:id="@+id/completed_time"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:textSize="12sp"
                android:fontFamily="serif"
                tools:text="12/12/2018" />

            <ImageButton
                android:id="@+id/task_delete"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="48dp"
                android:layout_height="40dp"
                android:contentDescription="@string/app_name"
                android:tint="@color/black_alpha54"
                app:srcCompat="@drawable/delete1" />


        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>